--- a/index.html
+++ b/index.html
@@ -319,178 +319,10 @@
 
             </div>
         </section>
-
-         <section class="items">
-            <div class="title">
-                <div class="category-name">
-                    Dairy, Bread & Eggs
-                </div>
-                <a href="#">see all</a>
-
-            </div>
-            <div class="list-items">
-               <div class="item">
-                 <div class="item-img">
-                    <img src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/86446a.jpg?ts=1641540332" alt="">
-
-                 </div>
-                 <div class="item-details">
-                    <div class="timer">
-                        <i class="fa-regular fa-clock"></i> 11 mins
-                    </div>
-                    <div class="item-name">
-                        Mother Dairy Classic Curd
-                    </div>
-                    <div class="item-weight">
-                        400g
-                    </div>
-                    <div class="item-price">
-                        <div class="price">₹34</div>
-                        <button>Add</button>
-                    </div>
-
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="item-img">
-                    <img src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/86446a.jpg?ts=1641540332" alt="">
-
-                 </div>
-                 <div class="item-details">
-                    <div class="timer">
-                        <i class="fa-regular fa-clock"></i> 11 mins
-                    </div>
-                    <div class="item-name">
-                        Mother Dairy Classic Curd
-                    </div>
-                    <div class="item-weight">
-                        400g
-                    </div>
-                    <div class="item-price">
-                        <div class="price">₹34</div>
-                        <button>Add</button>
-                    </div>
-
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="item-img">
-                    <img src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/86446a.jpg?ts=1641540332" alt="">
-
-                 </div>
-                 <div class="item-details">
-                    <div class="timer">
-                        <i class="fa-regular fa-clock"></i> 11 mins
-                    </div>
-                    <div class="item-name">
-                        Mother Dairy Classic Curd
-                    </div>
-                    <div class="item-weight">
-                        400g
-                    </div>
-                    <div class="item-price">
-                        <div class="price">₹34</div>
-                        <button>Add</button>
-                    </div>
-
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="item-img">
-                    <img src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/86446a.jpg?ts=1641540332" alt="">
-
-                 </div>
-                 <div class="item-details">
-                    <div class="timer">
-                        <i class="fa-regular fa-clock"></i> 11 mins
-                    </div>
-                    <div class="item-name">
-                        Mother Dairy Classic Curd
-                    </div>
-                    <div class="item-weight">
-                        400g
-                    </div>
-                    <div class="item-price">
-                        <div class="price">₹34</div>
-                        <button>Add</button>
-                    </div>
-
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="item-img">
-                    <img src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/86446a.jpg?ts=1641540332" alt="">
-
-                 </div>
-                 <div class="item-details">
-                    <div class="timer">
-                        <i class="fa-regular fa-clock"></i> 11 mins
-                    </div>
-                    <div class="item-name">
-                        Mother Dairy Classic Curd
-                    </div>
-                    <div class="item-weight">
-                        400g
-                    </div>
-                    <div class="item-price">
-                        <div class="price">₹34</div>
-                        <button>Add</button>
-                    </div>
-
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="item-img">
-                    <img src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/86446a.jpg?ts=1641540332" alt="">
-
-                 </div>
-                 <div class="item-details">
-                    <div class="timer">
-                        <i class="fa-regular fa-clock"></i> 11 mins
-                    </div>
-                    <div class="item-name">
-                        Mother Dairy Classic Curd
-                    </div>
-                    <div class="item-weight">
-                        400g
-                    </div>
-                    <div class="item-price">
-                        <div class="price">₹34</div>
-                        <button>Add</button>
-                    </div>
-
-                 </div>
-               </div>
-               <div class="item">
-                 <div class="item-img">
-                    <img src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=270/app/images/products/sliding_image/86446a.jpg?ts=1641540332" alt="">
-
-                 </div>
-                 <div class="item-details">
-                    <div class="timer">
-                        <i class="fa-regular fa-clock"></i> 11 mins
-                    </div>
-                    <div class="item-name">
-                        Mother Dairy Classic Curd
-                    </div>
-                    <div class="item-weight">
-                        400g
-                    </div>
-                    <div class="item-price">
-                        <div class="price">₹34</div>
-                        <button>Add</button>
-                    </div>
-
-                 </div>
-               </div>
-               
-
-            </div>
-        </section>
        </div>
     </main>
     <footer>
-        Made with <i class="fa-solid fa-heart"></i> by Suman Ghosh
+        Made with <i class="fa-solid fa-heart"></i> by Bavanv
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
